@@ -1,22 +1,24 @@
 package com.ucommerce.codegen.builders.java;
 
+import com.ucommerce.codegen.FQRef;
 import com.ucommerce.codegen.SourceCodeBuilder;
 import org.apache.commons.lang3.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Parameter;
 import java.text.MessageFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
  * Builder class for Java source files. See subclasses for specific target file types.
  */
 public abstract class JavaSourceBuilder implements SourceCodeBuilder {
+    private static Logger logger = LoggerFactory.getLogger(JavaSourceBuilder.class);
+
     protected static String END = ";";
     protected static String NEW_LINE = "\n";
     private List<JavaSourceFile> generatedFiles = new ArrayList<>();
@@ -32,12 +34,32 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
         currentFile.setTargetPackage("package " + resolvePackage(toConstruct) + END);
     }
 
+    /**
+     * Resolve and return the interfaces the generated class should implement.
+     *
+     * @param toConstruct
+     * @return
+     */
+    public List<FQRef> resolveImplements(Class toConstruct) {
+        List<FQRef> result = List.of(new FQRef(toConstruct.getPackageName(), toConstruct.getSimpleName()));
+        return result;
+    }
+
     @Override
     public void buildClassSignature(Class toConstruct) {
         List<String> classAnnotations = resolveClassAnnotations(toConstruct);
         currentFile.getClassSignature().addAll(classAnnotations);
 
-        String signature =  "public class " + resolveClassName(toConstruct);
+        List<FQRef> implementList = resolveImplements(toConstruct);
+
+        String signature = "public class " + resolveClassName(toConstruct);
+        if (!implementList.isEmpty()) {
+            signature += " implements ";
+            String targetPackage = resolvePackage(toConstruct);
+            implementList.stream().filter(e -> !e.packagePath().equals(targetPackage))
+                    .forEach(e -> currentFile.getImports().add(e.packagePath() + "." + e.className()));
+            signature += implementList.stream().map(e -> e.className()).collect(Collectors.joining(", "));
+        }
         currentFile.getClassSignature().add(signature);
     }
 
@@ -69,6 +91,30 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
         }
         methodBuilder.append(annotationString);
         methodBuilder.append(this.resolveParameterTypeAndName(method, parameter));
+        checkAndImport(parameter.getType());
+    }
+
+    /**
+     * Checks if the type needs to be imported, and if so, adds it to the list of imports.
+     *
+     * @param toCheck
+     */
+    protected void checkAndImport(Class<?> toCheck) {
+        String fullyQualifiedName = toCheck.getName();
+        logger.info("Check and import " + fullyQualifiedName);
+        if(toCheck.isPrimitive()){
+            logger.info("Param is primitive, no import needed: " + fullyQualifiedName);
+            return;
+        }
+        String paramPackage = fullyQualifiedName;
+        int index = paramPackage.lastIndexOf(".");
+        paramPackage = fullyQualifiedName.substring(0, index);
+
+        Objects.requireNonNull(currentFile.getTargetPackage(), "package statement should have been set by now!");
+        if (!Objects.equals(paramPackage, currentFile.getTargetPackage())
+                && !Objects.equals("java.lang", paramPackage)) { // never import java.lang
+            currentFile.getImports().add(fullyQualifiedName);
+        }
     }
 
     @Override
@@ -78,7 +124,7 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
 
     @Override
     public void afterParameters() {
-        methodBuilder.append("){" + NEW_LINE);
+        methodBuilder.append(") {" + NEW_LINE);
         paramCount = 0;
     }
 
@@ -116,16 +162,18 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
 
     /**
      * Resolve the annotations for the given method. Each annotation should be on a separate entry in the returned list.
+     * Default implementation returns an empty list.
      *
      * @param method the method to generate annotations for.
      * @return list of strings, each a valid, compiling annotation.
      */
     protected List<String> resolveMethodAnnotations(Method method) {
-        return Collections.emptyList();
+        return List.of("@Override");
     }
 
     /**
      * Resolves the annoations for the provided method and parameter.
+     * Default implementation returns an empty list.
      *
      * @return
      */
@@ -166,6 +214,7 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
                     this.delegate = {2};
                 '}'""", className, paramType, paramName);
         currentFile.getConstructors().add(constructor);
+        checkAndImport(toConstruct);
     }
 
 
